Fixed button text display on firefox

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -112,9 +112,6 @@ nav,
 section {
   display: block;
 }
-body {
-  line-height: 1;
-}
 ol,
 ul {
   list-style: none;
